syntax = "proto3";


// Define the service
service AcquisitionService {
    rpc acquire (AcquireRequest) returns (AcquireResponse);
    rpc display (DisplayRequest) returns (DisplayResponse);

}

// Define an empty request message
message AcquireRequest {}

// Define the response message
message AcquireResponse {
    string label = 1; // json string with gradio session
    bytes image = 2; // image encoded as bytes (e.g., PNG or JPEG)
}

message DisplayResponse {}

// Define the response message
message DisplayRequest {
    string label = 1; //json string with gradio session
    bytes image = 2; // image encoded as bytes (e.g., PNG or JPEG)
}